--- a/Launcher/Launcher.Module.Document/Views/DocumentView.xaml
+++ b/Launcher/Launcher.Module.Document/Views/DocumentView.xaml
@@ -2,10 +2,11 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:moonPdfLib="clr-namespace:MoonPdfLib;assembly=MoonPdfLib"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
+    <Grid Background="White">
         <Grid.RowDefinitions>
             <RowDefinition Height="15"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
@@ -17,6 +18,7 @@
         <Image Grid.Column="0" Grid.Row="0" Source="../../Launcher.Core.Gui/Image/imageButtonExitDocument.png" />
         <Grid x:Name="PresentationDocument" Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="2">
          <!--Сюда в старом образе у нас отображались данные -->  
+            <moonPdfLib:MoonPdfPanel x:Name="PdfPanel"/>
         </Grid>
     </Grid>
 </UserControl>
