--- a/Launcher/Launcher.Module.Document/Views/DocumentView.xaml
+++ b/Launcher/Launcher.Module.Document/Views/DocumentView.xaml
@@ -1,12 +1,11 @@
-﻿<Window      x:Class="Launcher.Module.Document.Views.DocumentView"
+﻿<UserControl      
+             x:Class="Launcher.Module.Document.Views.DocumentView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:moonPdfLib="clr-namespace:MoonPdfLib;assembly=MoonPdfLib"
-             mc:Ignorable="d" 
-             WindowStyle="None"
-             WindowState="Maximized"
+             mc:Ignorable="d" Width="500" Height="500"
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid Background="White">
         <Grid.RowDefinitions>
@@ -17,8 +16,10 @@
             <ColumnDefinition Width="15"></ColumnDefinition>
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <Image Grid.Column="0" Grid.Row="0" Source="/Launcher.Core.Gui;Component/Image/imageButtonExitDocument.png" />
+        <Image x:Name="ReturnImage" Source="../imageButtonExitDocument.png" Grid.Column="0" Grid.Row="0"  />
          <!--Сюда в старом образе у нас отображались данные -->
-        <moonPdfLib:MoonPdfPanel x:Name="PdfPanel" Grid.Row="1" Grid.Column="1"/>
+        <!--<moonPdfLib:MoonPdfPanel x:Name="PdfPanel" Grid.Row="1" Grid.Column="1" >
+            
+        </moonPdfLib:MoonPdfPanel>-->
     </Grid>
-</Window>
+</UserControl>
