--- a/Launcher/Launcher.Module.Document/Views/DocumentView.xaml
+++ b/Launcher/Launcher.Module.Document/Views/DocumentView.xaml
@@ -1,25 +1,26 @@
-﻿<UserControl      
-             x:Class="Launcher.Module.Document.Views.DocumentView"
+﻿<Window
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:moonPdfLib="clr-namespace:MoonPdfLib;assembly=MoonPdfLib"
-             mc:Ignorable="d" Width="500" Height="500"
-             d:DesignHeight="300" d:DesignWidth="300">
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d"      
+             x:Class="Launcher.Module.Document.Views.DocumentView"
+             ResizeMode="NoResize" WindowStyle="None" WindowState="Maximized"
+             d:DesignWidth="470" d:DesignHeight="303">
+
     <Grid Background="White">
         <Grid.RowDefinitions>
-            <RowDefinition Height="15"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="15"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="15"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="15"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <Image x:Name="ReturnImage" Source="../imageButtonExitDocument.png" Grid.Column="0" Grid.Row="0"  />
-         <!--Сюда в старом образе у нас отображались данные -->
-        <!--<moonPdfLib:MoonPdfPanel x:Name="PdfPanel" Grid.Row="1" Grid.Column="1" >
-            
-        </moonPdfLib:MoonPdfPanel>-->
+
+        <Canvas>
+            <ContentControl Content="{StaticResource appbar_chevron_left}" Canvas.Top="0" Canvas.Left="0"/>
+        </Canvas>
+        <!--Сюда в старом образе у нас отображались данные -->
+        <moonPdfLib:MoonPdfPanel x:Name="PdfPanel" Grid.Row="1" Grid.Column="1" />
     </Grid>
-</UserControl>
+</Window>
