--- a/Launcher/Launcher.Core.Gui/Style/ListBox.xaml
+++ b/Launcher/Launcher.Core.Gui/Style/ListBox.xaml
@@ -72,7 +72,7 @@
       <Setter Property="Template">
         <Setter.Value>
           <ControlTemplate TargetType="{x:Type ListBoxItem}">
-            <Border BorderBrush="DarkGreen" CornerRadius="2" BorderThickness="2">
+            <Border BorderBrush="DarkGreen" CornerRadius="2" BorderThickness="2" Margin="3">
                         <!--<Border.Style>
                             <Style TargetType="{x:Type Border}">
                                 <Style.Triggers>
