--- a/Launcher/Launcher.Module.Document/Views/DocumentView.xaml
+++ b/Launcher/Launcher.Module.Document/Views/DocumentView.xaml
@@ -1,24 +1,29 @@
-﻿<Window      x:Class="Launcher.Module.Document.Views.DocumentView"
+﻿<Window
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:moonPdfLib="clr-namespace:MoonPdfLib;assembly=MoonPdfLib"
+             xmlns:cal="http://www.caliburnproject.org"      x:Class="Launcher.Module.Document.Views.DocumentView"
              mc:Ignorable="d" 
              WindowStyle="None"
              WindowState="Maximized"
+             SizeToContent="Manual"
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid Background="White">
+    <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="15"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="90"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="15"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="90"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <Image Grid.Column="0" Grid.Row="0" Source="/Launcher.Core.Gui;Component/Image/imageButtonExitDocument.png" />
-         <!--Сюда в старом образе у нас отображались данные -->
-        <moonPdfLib:MoonPdfPanel x:Name="PdfPanel" Grid.Row="1" Grid.Column="1"/>
+
+        <!--Сюда в старом образе у нас отображались данные -->
+        <moonPdfLib:MoonPdfPanel x:Name="PdfPanel" Grid.Row="1" Grid.Column="1" Background="LightGray" cal:Message.Attach="[Event Loaded] = [Action ]"/>
+        <!--<Image Source="../../Launcher.Core.Gui/Image/imageButtonExitDocument.png" Stretch="Fill" >
+            
+        </Image>-->
     </Grid>
 </Window>
