--- a/Launcher/Launcher.Module.Document/Views/DocumentView.xaml
+++ b/Launcher/Launcher.Module.Document/Views/DocumentView.xaml
@@ -2,7 +2,9 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:moonPdfLib="clr-namespace:MoonPdfLib;assembly=MoonPdfLib"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d"      
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:cal="http://www.caliburnproject.org"
+    mc:Ignorable="d"      
              x:Class="Launcher.Module.Document.Views.DocumentView"
              ResizeMode="NoResize" WindowStyle="None" WindowState="Maximized"
              d:DesignWidth="470" d:DesignHeight="303">
@@ -17,9 +19,12 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <Canvas>
-            <ContentControl Content="{StaticResource appbar_chevron_left}" Canvas.Top="0" Canvas.Left="0"/>
-        </Canvas>
+        <StackPanel Grid.Column="0" Grid.Row="0" cal:Message.Attach="CloseWindow">
+            <Canvas>
+                <ContentControl Content="{StaticResource appbar_chevron_left}" Canvas.Top="0" Canvas.Left="0"/>
+            </Canvas>
+        </StackPanel>
+
         <!--Сюда в старом образе у нас отображались данные -->
         <moonPdfLib:MoonPdfPanel x:Name="PdfPanel" Grid.Row="1" Grid.Column="1" />
     </Grid>
