--- a/Launcher/Launcher/App.xaml
+++ b/Launcher/Launcher/App.xaml
@@ -15,6 +15,8 @@
                 <ResourceDictionary Source="/Launcher.Core.Gui;component/Icons.xaml" />
                 <ResourceDictionary Source="/Launcher.Core.Gui;component/Style.xaml" />
                 <ResourceDictionary Source="/Launcher.Core.Gui;component/Style/ListBox.xaml" />
+                <ResourceDictionary Source="/Launcher.Core.Gui;component/Style/Label.xaml"/>
+                <ResourceDictionary Source="/Launcher.Core.Gui;component/Style/TextBox.xaml"/>
                 <!--<ResourceDictionary Source="/Launcher.Core/UserControls/SquareButtonWithRoundedBorders.xaml"/>-->
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
