--- a/Launcher/Launcher/Views/LoginView.xaml
+++ b/Launcher/Launcher/Views/LoginView.xaml
@@ -35,45 +35,19 @@
                         Здравствуйте,для работы с программой, необходимо зарегистрироваться. ООО "ПКБ ЖТ"
                         <Hyperlink NavigateUri="http://pkbzht.ru/" Foreground="White"> http://pkbzht.ru/</Hyperlink>
                     </TextBlock>
-                    <Label Name="Name_lbl" Grid.Row="1" Grid.Column="0" Background="{StaticResource AccentColorBrush}"
-                           Foreground="White" Content="Введите Имя" HorizontalContentAlignment="Left"
-                           VerticalContentAlignment="Center" BorderBrush="White" BorderThickness="0.9" />
-                    <TextBox Name="Name_tbx" Grid.Row="1" Grid.Column="1" HorizontalContentAlignment="Center"
-                             VerticalContentAlignment="Center" BorderBrush="Black" Background="White"
-                             BorderThickness="0.4" />
-                    <Label Name="Family_lbl" Grid.Row="2" Grid.Column="0"
-                           Background="{StaticResource AccentColorBrush}" Foreground="White" Content="Введите Фамилию"
-                           HorizontalContentAlignment="Left" VerticalContentAlignment="Center" BorderBrush="White"
-                           BorderThickness="0.9" />
-                    <TextBox Name="Family_tbx" Grid.Row="2" Grid.Column="1" HorizontalContentAlignment="Center"
-                             VerticalContentAlignment="Center" BorderBrush="Black" Background="White"
-                             BorderThickness="0.4" />
-                    <Label Name="Login_lbl" Grid.Row="3" Grid.Column="0" Background="{StaticResource AccentColorBrush}"
-                           Foreground="White" Content="Введите Табельный номер" HorizontalContentAlignment="Left"
-                           VerticalContentAlignment="Center" BorderBrush="White" BorderThickness="0.9" />
-                    <TextBox Name="Login_tbx" Grid.Row="3" Grid.Column="1" HorizontalContentAlignment="Center"
-                             VerticalContentAlignment="Center" BorderBrush="Black" Background="White"
-                             BorderThickness="0.4" />
-                    <Label Name="Password_lbl1" Grid.Row="4" Grid.Column="0"
-                           Background="{StaticResource AccentColorBrush}" Foreground="White" Content="Введите Пароль"
-                           HorizontalContentAlignment="Left" VerticalContentAlignment="Center" BorderBrush="White"
-                           BorderThickness="0.9" />
-                    <PasswordBox Name="Passwb1" Grid.Row="4" Grid.Column="1" HorizontalContentAlignment="Center"
-                                 VerticalContentAlignment="Center" BorderBrush="Black" Background="White"
-                                 BorderThickness="0.4" />
-                    <Label Name="Password_lbl2" Grid.Row="5" Grid.Column="0"
-                           Background="{StaticResource AccentColorBrush}" Foreground="White" Content="Повторите пароль"
-                           HorizontalContentAlignment="Left" VerticalContentAlignment="Center" BorderBrush="White"
-                           BorderThickness="0.9" />
-                    <PasswordBox Name="Passwb2" Grid.Row="5" Grid.Column="1" HorizontalContentAlignment="Center"
-                                 VerticalContentAlignment="Center" BorderBrush="Black" Background="White"
-                                 BorderThickness="0.4" />
-                    <Label Name="email_lbl" Grid.Row="6" Grid.Column="0" Background="{StaticResource AccentColorBrush}"
-                           Foreground="White" Content="Электронная почта" HorizontalContentAlignment="Left"
-                           VerticalContentAlignment="Center" BorderBrush="White" BorderThickness="0.9" />
-                    <TextBox Name="email_tbx" Grid.Row="6" Grid.Column="1" />
-                    <Button Name="Accept_btn" Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2"
-                            Content="Зарегистрироваться" />
+                    <Label Name="Name_lbl"          Grid.Row="1" Grid.Column="0" Style="{StaticResource LabelStyleGreen}" Content="Введите Имя"/>
+                    <TextBox Name="Name_tbx"        Grid.Row="1" Grid.Column="1" Style="{StaticResource TextBoxStyleGreen}"/>
+                    <Label Name="Family_lbl"        Grid.Row="2" Grid.Column="0" Style="{StaticResource LabelStyleGreen}" Content="Введите Фамилию"/>
+                    <TextBox Name="Family_tbx"      Grid.Row="2" Grid.Column="1" Style="{StaticResource TextBoxStyleGreen}"/>
+                    <Label Name="Login_lbl"         Grid.Row="3" Grid.Column="0" Style="{StaticResource LabelStyleGreen}" Content="Введите Табельный номер"  />
+                    <TextBox Name="Login_tbx"       Grid.Row="3" Grid.Column="1" Style="{StaticResource TextBoxStyleGreen}" />
+                    <Label Name="Password_lbl1"     Grid.Row="4" Grid.Column="0" Style="{StaticResource LabelStyleGreen }" Content="Введите Пароль" />
+                    <PasswordBox Name="Passwb1"     Grid.Row="4" Grid.Column="1" Style="{StaticResource PasswordBoxStyleGreen}"/>
+                    <Label Name="Password_lbl2"     Grid.Row="5" Grid.Column="0" Style="{StaticResource LabelStyleGreen}" Content="Повторите пароль" />
+                    <PasswordBox Name="Passwb2"     Grid.Row="5" Grid.Column="1" Style="{StaticResource PasswordBoxStyleGreen}" />
+                    <Label Name="email_lbl"         Grid.Row="6" Grid.Column="0" Style="{StaticResource LabelStyleGreen}" Content="Электронная почта"  />
+                    <TextBox Name="email_tbx"       Grid.Row="6" Grid.Column="1" Style="{StaticResource TextBoxStyleGreen}"/>
+                    <Button Name="Accept_btn"       Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" Content="Зарегистрироваться" />
                     <!--<Label-->
                 </Grid>
             </TabItem>
