--- a/Launcher/Launcher.Module.Document/Views/DocumentView.xaml
+++ b/Launcher/Launcher.Module.Document/Views/DocumentView.xaml
@@ -1,11 +1,10 @@
 ﻿<Window
+             x:Class="Launcher.Module.Document.Views.DocumentView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:moonPdfLib="clr-namespace:MoonPdfLib;assembly=MoonPdfLib"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:cal="http://www.caliburnproject.org"
-    mc:Ignorable="d"      
-             x:Class="Launcher.Module.Document.Views.DocumentView"
+             xmlns:cal="http://www.caliburnproject.org" mc:Ignorable="d"      
              ResizeMode="NoResize" WindowStyle="None" WindowState="Maximized"
              d:DesignWidth="470" d:DesignHeight="303">
 
