--- a/Launcher/Launcher/Views/LauncherView.xaml
+++ b/Launcher/Launcher/Views/LauncherView.xaml
@@ -57,54 +57,17 @@
                    Foreground="White" HorizontalContentAlignment="Right" FontSize="15" />
             <TextBlock x:Name="TextBlockAny" Grid.Column="7" Grid.RowSpan="2" TextWrapping="WrapWithOverflow"
                        Foreground="White" FontSize="15" HorizontalAlignment="Right" />
-            
+
             <TextBox x:Name="TextBoxSearch" controls:TextboxHelper.Watermark="Поиск" Grid.Row="0" Grid.Column="1"
                      Grid.ColumnSpan="5" Grid.RowSpan="2" VerticalAlignment="Center"
-                     FontSize="17" cal:Message.Attach="[Event MouseLeftButtonDown ] = [Action Search]">
+                     FontSize="17" 
+                     cal:Message.Attach="[Event GotFocus] = [Action Search]">
                 <TextBox.Style>
                     <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource SearchMetroTextBox}" />
                 </TextBox.Style>
             </TextBox>
-            
-            <Popup Width="{Binding RelativeSource={RelativeSource Self}, Path=PlacementTarget.ActualWidth}"
-                   Placement="Bottom" PlacementTarget="{Binding ElementName=TextBoxSearch}">   
-                <Popup.Style>
-                    <Style TargetType="{x:Type Popup}">
-                        <Setter Property="IsOpen" Value="False" />
-                        <Style.Triggers>
-                            <DataTrigger Binding="{Binding Path=IsFocused, ElementName=TextBoxSearch}" Value="True">
-                                <Setter Property="IsOpen" Value="True" />
-                            </DataTrigger>
-                        </Style.Triggers>
-                    </Style>
-                </Popup.Style>
-
-                <ListBox x:Name="SearchResult" Background="{DynamicResource AccentColorBrush}"
-                         ScrollViewer.VerticalScrollBarVisibility="Hidden" FontSize="18">
-                    <ListBox.ItemContainerStyle>
-                        <Style TargetType="ListBoxItem">
-                            <Setter Property="Background" Value="WhiteSmoke" />
-                            <Setter Property="Margin" Value="1" />
-                            <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Hidden" />
-                            <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Hidden" />
-                            <Setter Property="BorderThickness" Value="1,0,0,0" />
-                            <!--<Setter Property="Content" Value="{Binding Name}"/>-->
-                            <Style.Triggers>
-                                <Trigger Property="IsMouseOver" Value="True">
-                                    <Setter Property="Foreground" Value="White" />
-                                </Trigger>
-                            </Style.Triggers>
-                        </Style>
-                    </ListBox.ItemContainerStyle>
-                    <ListBox.ItemTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding Name}"/>
-                        </DataTemplate>
-                    </ListBox.ItemTemplate>
-                </ListBox>
-            </Popup>
         </Grid>
-        
+
         <ListBox x:Name="CurrentModuleState" Grid.Row="1" Grid.RowSpan="7" Grid.Column="0"
                  Background="{DynamicResource AccentColorBrush}" />
         <ContentControl Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="6" Grid.RowSpan="7" x:Name="ActiveItem" />
@@ -119,6 +82,6 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
-        
+
     </Grid>
 </UserControl>
