--- a/Launcher/Launcher/Views/LoginView.xaml
+++ b/Launcher/Launcher/Views/LoginView.xaml
@@ -19,27 +19,32 @@
             <ColumnDefinition />
             <ColumnDefinition />
             <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
         </Grid.ColumnDefinitions>
-        <Border Background="White" CornerRadius="10" Grid.Column="2" Grid.Row="1">
-            <StackPanel >
-                <Grid >
-                    <Grid.RowDefinitions>
-                        <RowDefinition />
-                        <RowDefinition />
-                        <RowDefinition />
-                        <RowDefinition />
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="20"/>
-                        <ColumnDefinition />
-                        <ColumnDefinition Width="20"/>
-                    </Grid.ColumnDefinitions>
-                    <Label Grid.Row="0" Grid.Column="1" Content="Вход" HorizontalAlignment="Center" />
-                    <TextBox Grid.Row="1" Grid.Column="1" controls:TextboxHelper.Watermark="Табелный номер"></TextBox>
-                    <PasswordBox Grid.Row="2" Grid.Column="1" controls:TextboxHelper.Watermark="Пароль"></PasswordBox>
-                    <Button Grid.Row="3" Grid.Column="1" Content="Войти"></Button>
-                </Grid>
-            </StackPanel>
+        <Border Background="White" CornerRadius="10" Grid.Column="3" Grid.Row="1">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="20"/>
+                    <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition Height="20"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="20"/>
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="20"/>
+                </Grid.ColumnDefinitions>
+                <Label Grid.Row="1" Grid.Column="1" Content="ВХОД" HorizontalAlignment="Center" Foreground="#66CC66" FontSize="14" VerticalContentAlignment="Center"/>
+                <Separator Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" />
+                <TextBox Margin="0,10" Grid.Row="3" Grid.Column="1" controls:TextboxHelper.Watermark="Табелный номер" VerticalContentAlignment="Center"/>
+                <PasswordBox Margin="0,10" Grid.Row="4" Grid.Column="1" controls:TextboxHelper.Watermark="Пароль" VerticalContentAlignment="Center"></PasswordBox>
+                <Button Grid.Row="6" Grid.Column="1" Content="Войти" Background="#66CC66" Foreground="White"></Button>
+            </Grid>
         </Border>
     </Grid>
 </UserControl>
