--- a/Launcher/Launcher.Module.Inspection/Views/MainInspectionView.xaml
+++ b/Launcher/Launcher.Module.Inspection/Views/MainInspectionView.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:micro="http://www.caliburnproject.org"
-             xmlns:UserControls="clr-namespace:Launcher.Core.UserControls;assembly=Launcher.Core" x:Class="Launcher.Module.Inspection.Views.MainInspectionView"
+             x:Class="Launcher.Module.Inspection.Views.MainInspectionView"
              mc:Ignorable="d" 
              d:DesignHeight="1400" d:DesignWidth="1600">
     <UserControl.Resources>
