--- a/Launcher/Launcher/Views/RegistrationView.xaml
+++ b/Launcher/Launcher/Views/RegistrationView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Launcher.Views.LoginView"
+﻿<UserControl x:Class="Launcher.Views.RegistrationView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -32,6 +32,9 @@
                     <RowDefinition />
                     <RowDefinition />
                     <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
                     <RowDefinition Height="20"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
@@ -39,15 +42,16 @@
                     <ColumnDefinition />
                     <ColumnDefinition Width="20"/>
                 </Grid.ColumnDefinitions>
-                <Label Grid.Row="1" Grid.Column="1" Content="ВХОД" HorizontalAlignment="Center" Foreground="#66CC66" FontSize="24" VerticalContentAlignment="Center"/>
-                <TextBlock x:Name="Register" Grid.Column="1" Grid.Row="2" Text="1ый раз? Тогда " VerticalAlignment="Top" FontSize="20" HorizontalAlignment="Center"/>
-                <Button Grid.Column="1" Grid.Row="2" Margin="0, 30, 0, 10" Content="Зарегистрируйся!" FontSize="20"></Button>
+                <Label Grid.Row="1" Grid.Column="1" Content="Регистрация" HorizontalAlignment="Center" Foreground="#66CC66" FontSize="24" VerticalContentAlignment="Center"/>
+                <TextBlock Grid.Column="1" Grid.Row="2" Text="Для входа в программу заполните поля" VerticalAlignment="Center" Foreground="#66CC66"></TextBlock>
                 <Separator Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" VerticalAlignment="Bottom"/>
-                <TextBox x:Name="PersonalNumber" Margin="0,10" Grid.Row="3" Grid.Column="1" controls:TextboxHelper.Watermark="Табелный номер" VerticalContentAlignment="Center"/>
-                <!--TODO PasswordBox -->
-                <PasswordBox Margin="0,10" Grid.Row="4" Grid.Column="1" controls:TextboxHelper.Watermark="Пароль" VerticalContentAlignment="Center"/>
-                <CheckBox x:Name="RememberMe" Grid.Row="5" Grid.Column="1" Content="Запомнить?" VerticalContentAlignment="Center" FontSize="20" Foreground="#66CC66" HorizontalAlignment="Left"></CheckBox>
-                <Button x:Name="Login" Grid.Row="6" Grid.Column="1" Content="Войти" Background="#66CC66" Foreground="White" FontSize="24"></Button>
+                <TextBox Margin="0,10" Grid.Row="3" Grid.Column="1" controls:TextboxHelper.Watermark="Табелный номер" VerticalContentAlignment="Center"/>
+                <TextBox Margin="0,10" Grid.Row="4" Grid.Column="1" controls:TextboxHelper.Watermark="Имя" VerticalContentAlignment="Center"/>
+                <TextBox Margin="0,10" Grid.Row="5" Grid.Column="1" controls:TextboxHelper.Watermark="Фамилия" VerticalContentAlignment="Center"/>
+                <TextBox Margin="0,10" Grid.Row="6" Grid.Column="1" controls:TextboxHelper.Watermark="Отчество" VerticalContentAlignment="Center"/>
+                <PasswordBox Margin="0,10" Grid.Row="7" Grid.Column="1" controls:TextboxHelper.Watermark="Пароль" VerticalContentAlignment="Center"></PasswordBox>
+                <PasswordBox Margin="0,10" Grid.Row="8" Grid.Column="1" controls:TextboxHelper.Watermark="Повторите пароль" VerticalContentAlignment="Center"></PasswordBox>
+                <Button x:Name="Register" Grid.Row="9" Grid.Column="1" Content="Регистрация" Background="#66CC66" Foreground="White" FontSize="24"></Button>
             </Grid>
         </Border>
     </Grid>
