--- a/Launcher/Launcher/Views/RegistrationView.xaml
+++ b/Launcher/Launcher/Views/RegistrationView.xaml
@@ -45,12 +45,12 @@
                 <Label Grid.Row="1" Grid.Column="1" Content="Регистрация" HorizontalAlignment="Center" Foreground="#66CC66" FontSize="24" VerticalContentAlignment="Center"/>
                 <TextBlock Grid.Column="1" Grid.Row="2" Text="Для входа в программу заполните поля" VerticalAlignment="Center" Foreground="#66CC66"></TextBlock>
                 <Separator Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" VerticalAlignment="Bottom"/>
-                <TextBox Margin="0,10" Grid.Row="3" Grid.Column="1" controls:TextboxHelper.Watermark="Табелный номер" VerticalContentAlignment="Center"/>
-                <TextBox Margin="0,10" Grid.Row="4" Grid.Column="1" controls:TextboxHelper.Watermark="Имя" VerticalContentAlignment="Center"/>
-                <TextBox Margin="0,10" Grid.Row="5" Grid.Column="1" controls:TextboxHelper.Watermark="Фамилия" VerticalContentAlignment="Center"/>
-                <TextBox Margin="0,10" Grid.Row="6" Grid.Column="1" controls:TextboxHelper.Watermark="Отчество" VerticalContentAlignment="Center"/>
-                <PasswordBox Margin="0,10" Grid.Row="7" Grid.Column="1" controls:TextboxHelper.Watermark="Пароль" VerticalContentAlignment="Center"></PasswordBox>
-                <PasswordBox Margin="0,10" Grid.Row="8" Grid.Column="1" controls:TextboxHelper.Watermark="Повторите пароль" VerticalContentAlignment="Center"></PasswordBox>
+                <TextBox x:Name="PersonalNumber" Margin="0,10" Grid.Row="3" Grid.Column="1" controls:TextboxHelper.Watermark="Табелный номер" VerticalContentAlignment="Center"/>
+                <TextBox x:Name="Name" Margin="0,10" Grid.Row="4" Grid.Column="1" controls:TextboxHelper.Watermark="Имя" VerticalContentAlignment="Center"/>
+                <TextBox x:Name="LastName" Margin="0,10" Grid.Row="5" Grid.Column="1" controls:TextboxHelper.Watermark="Фамилия" VerticalContentAlignment="Center"/>
+                <TextBox x:Name="Patronymic" Margin="0,10" Grid.Row="6" Grid.Column="1" controls:TextboxHelper.Watermark="Отчество" VerticalContentAlignment="Center"/>
+                <TextBox x:Name="Password" Margin="0,10" Grid.Row="7" Grid.Column="1" controls:TextboxHelper.Watermark="Пароль" VerticalContentAlignment="Center"></TextBox>
+                <TextBox x:Name="PasswordRepeat" Margin="0,10" Grid.Row="8" Grid.Column="1" controls:TextboxHelper.Watermark="Повторите пароль" VerticalContentAlignment="Center"></TextBox>
                 <Button x:Name="Register" Grid.Row="9" Grid.Column="1" Content="Регистрация" Background="#66CC66" Foreground="White" FontSize="24"></Button>
             </Grid>
         </Border>
