--- a/Launcher/Launcher.Core.Gui/Style.xaml
+++ b/Launcher/Launcher.Core.Gui/Style.xaml
@@ -7,11 +7,11 @@
     <Style TargetType="{x:Type Window}">
         <Setter Property="FontFamily" Value="/Ubuntu-R.ttf" />
     </Style>
-    
-    
-    <Color x:Key="HighlightColor">#008000</Color>
 
-    <Color x:Key="AccentColor">White</Color>
+
+    <Color x:Key="HighlightColor">#249938</Color>
+
+    <Color x:Key="AccentColor">#4ADF62</Color>
     <!--60% Выделение-->
     <Color x:Key="AccentColor2">#60E861</Color>
     <!--40%-->
