--- a/Launcher/Launcher.Core.Gui/Style/ListBox.xaml
+++ b/Launcher/Launcher.Core.Gui/Style/ListBox.xaml
@@ -4,8 +4,9 @@
     <Style x:Key="ListBoxItemCategory" TargetType="ListBoxItem">
         <Setter Property="Foreground" Value="White" />
         <Setter Property="FontSize" Value="22" />
-        <Setter Property="Width" Value="125" />
-        <Setter Property="Height" Value="125" />
+        <Setter Property="Width" Value="130" />
+        <Setter Property="Height" Value="130" />
+        <Setter Property="TextBlock.TextWrapping" Value="WrapWithOverflow"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ListBoxItem}">
@@ -24,7 +25,7 @@
                             <Border x:Name="FirstBorder" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3"
                                     Grid.RowSpan="3" BorderBrush="Green" BorderThickness="3"
                                     HorizontalAlignment="Stretch" Margin="1" VerticalAlignment="Stretch"
-                                    CornerRadius="11">
+                                    CornerRadius="11" >
 
                                 <Border x:Name="SecondBorder" BorderBrush="Yellow" BorderThickness="3" Margin="1"
                                         CornerRadius="3" Background="DarkGreen">
