--- a/Launcher/Launcher.Module.Document/Views/MainDocView.xaml
+++ b/Launcher/Launcher.Module.Document/Views/MainDocView.xaml
@@ -10,7 +10,7 @@
             <ColumnDefinition Width="130"></ColumnDefinition>
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <ListBox x:Name="CategoryList" ItemContainerStyle="{StaticResource ListBoxItemCategory}" 
+        <ListBox Background="{DynamicResource AccentColorBrush}" x:Name="CategoryList" ItemContainerStyle="{StaticResource ListBoxItemCategory}" 
                  cal:Message.Attach="[Event SelectionChanged] = [Action Show]" ScrollViewer.VerticalScrollBarVisibility="Disabled" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
             <ListBox.ItemTemplate>
                 <DataTemplate>
