--- a/Launcher/Launcher/Views/ModuleListView.xaml
+++ b/Launcher/Launcher/Views/ModuleListView.xaml
@@ -10,7 +10,7 @@
     <Grid>
         <ListBox x:Name="Modules" ScrollViewer.HorizontalScrollBarVisibility="Hidden"
                  ScrollViewer.VerticalScrollBarVisibility="Hidden"
-                 Background="{DynamicResource AccentColorBrush4}" BorderThickness="0"
+                 Background="{DynamicResource AccentColorBrush}" BorderThickness="0"
                  HorizontalContentAlignment="Stretch"
                  cal:Message.Attach="[Event SelectionChanged] = [Action OpenModule]">
                  
